Making the edit form- the style and position and stop overflowing and adding event to the cancel button and initalizng the values when clicking on an item

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
 /* 
     - COLOR VALUES HENTED FROM: https://colorhunt.co/palette/147323
+    - Z-index values:
+        .overlay: 999
+        .td .item: 1
+        #edit-form: 2
 */
 :root {
   --black-color: #2b4353;
@@ -120,6 +124,11 @@ button:hover,
   opacity: 0.9;
 }
 
+.btn-primary {
+  background: var(--primary-color);
+  color: var(--white-color);
+}
+
 .btn-secondary {
   background: var(--secondary-color);
   color: var(--white-color);
@@ -133,6 +142,10 @@ button:hover,
 .btn-darker-white {
   background: var(--darker-white);
   color: var(--black-color);
+}
+
+.text-center {
+  text-align: center;
 }
 
 /* Nav */
@@ -280,4 +293,49 @@ table tbody td:not(:first-child) {
 /* add-menu */
 #add-menu {
   display: none;
+}
+
+/* edit-form */
+#edit-form {
+  position: absolute;
+  width: 350px;
+  background: var(--white-color);
+  z-index: 2;
+  top: 0;
+  left: 0;
+  border-radius: 10px;
+  padding: 1rem;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+  display: none;
+}
+
+#edit-form hr {
+  margin-bottom: 0.3rem;
+}
+
+#edit-form .title {
+  font-size: 1.5rem;
+  font-weight: 300;
+  margin-bottom: 0.5rem;
+}
+
+#edit-form label {
+  float: left;
+  min-width: 30%;
+  margin-top: 1.1rem;
+}
+
+#edit-form input[type='number'],
+#edit-form input[type='text'] {
+  width: 68%;
+  margin-left: 2%;
+  margin-top: 0.5rem;
+  padding: 0.5rem;
+}
+
+#edit-form input[type='submit'],
+#edit-form button {
+  font-size: 1rem;
+  float: right;
+  margin-left: 0.5rem;
 }
